try to fix link to discovery homepage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Hazelcast Incubator
   <h1>Incubated Projects</h1>
   <ul class="posts">
     <li><a 
-href="http://hazelcast-incubator.github.io/hazelcast-discovery-spi/">hazelcast-discovery-api</a> 
+href="http://hazelcast-incubator.github.io/hazelcast-discovery-spi/">hazelcast-discovery-spi</a> 
 Provide a Generic Discovery Framework for Hazelcast clusters and clients.  Into which platforms can 
 be injected such as AWS, Azure, OpenStack etc</li>  </ul>
 </div>
